--- a/src/style/common.less
+++ b/src/style/common.less
@@ -17,9 +17,9 @@ body {
 }
 
 .app-name {
-  display: none;
+  // display: none;
   padding: 0 8 * @REM;
-  font-size: 14 * @REM;
+  font-size: 16 * @REM;
   text-transform: uppercase; /* capitalize | uppercase | lowercase */
 }
 
